--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 		
 		<body>
 			<p id = "games"> This is blank1</p></br>
+			<button type = "button" onclick = "document.getElementById('games').innerHTML= 'Blank 1'"> This is a button</button>
 			<p id = "videos"> <i>This is blank2</i></p></br>
-			<p id = "blog" ><b>This is blank3</b></p>
+			<button type = "button" onclick = "document.getElementById('videos').innerHTML= 'Blank 2'"> This is a button</button>
+            <p id = 'blog' ><b>This is blank3</b></p>
+			<button type = "button" onclick = "document.getElementById('blog').innerHTML= 'Blank 3'"> This is a button</button>
+
+			<p id = 'test' >Hello</p>
+			<button type="button" onclick ="document.getElementById('test').innerHTML='byebye'">Bye Bye</button>
+		
 		</body>
 		
 		<footer>
@@ -16,3 +23,4 @@
 		<footer/>
 		
 	</html>		
+
